Add 3 column example

--- a/css/kiwi.css
+++ b/css/kiwi.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 article {
   width: 100%; }
 
@@ -22,5 +25,40 @@ article {
     border: dotted 0.1em #eee; }
   .widget h3, .widget p {
     padding: 0.5em; }
+
+.slide--left-pane-example .menu, .slide--right-pane-example .menu {
+  width: 16.6666666667%;
+  float: left; }
+
+.slide--left-pane-example .main, .slide--right-pane-example .main {
+  width: 83.3333333333%;
+  float: left; }
+
+.menu, .main, .sidebar {
+  color: white;
+  padding: 2em;
+  height: 40em;
+  border: dotted 0.05em #eee; }
+
+.menu {
+  background-color: tomato; }
+
+.main {
+  background-color: purple; }
+
+.sidebar {
+  background-color: turquoise; }
+
+.slide--3-col-example .menu {
+  width: 16.6666666667%;
+  float: left; }
+
+.slide--3-col-example .main {
+  width: 66.6666666667%;
+  float: left; }
+
+.slide--3-col-example .sidebar {
+  width: 16.6666666667%;
+  float: left; }
 
 /*# sourceMappingURL=kiwi.css.map */
